# legacy_version

./: .env.example  .env.hurl.example  .gitignore  README.md  README.zh-TW.md  docker-compose.yml  index.html  pnpm-lock.yaml  pyproject.toml  run_all.sh  run_test.sh
.github/: CODEOWNERS
.github/workflows/: backend-workflow-entry.yml
backend/api-server/.github/workflows/: cicd.yaml
backend/spam-blocker/: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  format_code.sh
backend/spam-blocker/scripts/: README.md  check_redis_processed.sh  redis_quick_check.sh
backend/spam-blocker/src/lib/: GfApiClient.py  OllamaClient.py  __init__.py
backend/spam-blocker/src/message_queue/: ProcessedRecordTracker.py  Scheduler.py  __init__.py
backend/spam-blocker/src/prompt/: system_prompts.py
backend/spam-blocker/src/wokers/: RecordFetcher.py  RecordProcessor.py  __init__.py
prompt/: validate_humanresouce_prompt.txt
script/: start_celery.sh  start_message_queue.sh
src/: App.vue  main.py
src/lib/: GfApiClient.py  GoogleSheetHandler.py  OllamaClient.py  __init__.py
src/message_queue/: MessageQueueProcessor.py  ProcessedRecordTracker.py  Scheduler.py  __init__.py
src/prompt/: system_prompts.py
src/wokers/: RecordFetcher.py  RecordProcessor.py
tests/: test_accommodations.hurl  test_admin.hurl  test_health.hurl  test_human_resources.hurl  test_medical_stations.hurl  test_mental_health_resources.hurl  test_reports.hurl  test_restrooms.hurl  test_shelters.hurl  test_shower_stations.hurl  test_supplies.hurl  test_volunteer_organizations.hurl  test_water_refill_stations.hurl
