[project]
name = "spam-blocker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "logging>=0.4.9.6",
    "ollama>=0.6.0",
    "pydantic>=2.11.10",
    "requests>=2.32.5",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.108.0",
    "redis>=6.4.0",
    "schedule>=1.2.2",
    "httplib2>=0.31.0",
    "black>=25.9.0",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "autopep8>=2.0.0",
    "autoflake>=2.0.0",
]

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # 預設排除的目錄
  \.git
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 80
known_first_party = ["lib", "message_queue", "prompt"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
